--- a/01-cards-sliders/index.html
+++ b/01-cards-sliders/index.html
@@ -15,7 +15,7 @@
         <h3>Editorial</h3>
     </div>
     <div
-            class="slide active"
+            class="slide"
             style="
           background-image: url('https://images.unsplash.com/photo-1497493292307-31c376b6e479?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1171&q=80');
         "
